Fixes and Enhancements since Version 0.5 alpha 2

 Changed, Enhanced, or Newly Deprecated Features

 - Added 'peak.core' as a minimal subset of 'peak.api'.  'peak.core' offers
   only "core" API packages and primitives, not the full set of available
   framework APIs.  'peak.api' will continue to expand as frameworks are added,
   but 'peak.core' will stay as small as practical.  ('peak.exceptions' may in
   fact end up being removed from 'peak.core', or at least renamed.)

 - Added 'peak.util.symbol' module, to contain 'NOT_GIVEN', 'NOT_FOUND', and
   the 'Symbol' class used to create them.

 - 'peak.running.tools' was promoted to 'peak.tools'.  'peak.running.supervisor'
   was also moved to 'peak.tools.supervisor', and a new 'peak help' command was
   added in 'peak.tools.api_help'.

 - Replaced the "[Provide Utilities]" section of .ini files with "[Component
   Factories]".  The new section type is easier to use, much more versatile,
   and does all registration and imports lazily.  See the 'peak.ini' file for
   docs.  "[Provide Utilities]" and 'config.ProvideInstance()' are now
   DEPRECATED, so please convert ASAP.

 - 'binding.Make()' now accepts configuration keys, using them to look up a
   factory object that's then invoked to create the attribute.  This makes it
   a lot easier to define a component with its own transaction service,
   'IBasicReactor', or other normally "global" component.  It also makes it
   easier to globally specify a factory class for some interface.  Factories
   are looked up under the 'config.FactoryFor(key)' configuration key.  (See
   below.)

 - Added 'config.FactoryFor(key)', a 'config.IConfigKey' implementation that
   provides a configuration namespace for factories.

   When you use 'binding.Make(ISomething)', it's roughly equivalent to::

        binding.Make(
            lambda self,d,a:
                binding.lookupComponent(
                    self, config.FactoryFor(ISomething),